crates/wac-parser/tests/resolution/fail/duplicate-inst-args.wac
package test:comp;

import bar: func();

let x = new foo:bar { foo: bar, foo: bar };
